--- a/src/main/resources/templates/reports/reports.html
+++ b/src/main/resources/templates/reports/reports.html
@@ -57,11 +57,10 @@
 											Reporte</a>
 									</div>
 									<div class="cproyecto ">
-										<h3 class="tproyecto ">Categorías</h3>
-										<p class="dproyecto ">Lista de las categorías con más
-											cantidad en ventas en las órdenes</p>
-										<a class="lnikp " th:href="@{/categories/reporte2}">Ver
-											Reporte</a>
+										<h3 class="tproyecto ">Tiendas Registradas</h3>
+										<p class="dproyecto ">Lista de tiendas registradas del
+											último mes</p>
+										<a class="lnikp " th:href="@{/store/reporte2}">Ver Reporte</a>
 									</div>
 								</div>
 
