--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -113,6 +113,18 @@
 				</a>
 				<p>Reportes</p>
 			</div>
+			<div class="panelitem">
+				<a th:href="@{/recomendations/list}"> <i
+					class="fa fa-star" style="color: #D6D010;"></i>
+				</a>
+				<p>Recomendaciones</p>
+			</div>
+			<div class="panelitem">
+				<a th:href="@{/recoparts/list}"> <i
+					class="fa fa-star" style="color: #D6D010;"></i>
+				</a>
+				<p>Recomendaciones Partes</p>
+			</div>
 		</div>
 	</div>
 </body>
