--- a/src/main/resources/templates/reports/reports.html
+++ b/src/main/resources/templates/reports/reports.html
@@ -53,7 +53,7 @@
 										<h3 class="tproyecto ">Productos por Venta</h3>
 										<p class="dproyecto ">Lista de la cantidad de veces que un
 											producto fue vendido</p>
-										<a class="lnikp " th:href="@{/products/reporte1}">Ver
+										<a class="lnikp " th:href="@{/hardware/reporte1}">Ver
 											Reporte</a>
 									</div>
 									<div class="cproyecto ">
