--- a/src/main/resources/templates/distrito/listDistrito.html
+++ b/src/main/resources/templates/distrito/listDistrito.html
@@ -34,7 +34,7 @@
 					<button type="submit" class="btn btn-danger">Buscar</button>
 					<a href="/distritos/list" class="btn btn-light">Limpiar</a>
 				</form>
-				<a th:href="@{/distritos/new}" class="btn btn-primary">Nuevo</a>
+				<a th:href="@{/distritos/new}" class="btnnew btn btn-danger">Nuevo</a>
 			</div>
 			<table class="table">
 				<thead class="thead-light">
