--- a/src/main/resources/templates/recomendacion/listRecomendacion.html
+++ b/src/main/resources/templates/recomendacion/listRecomendacion.html
@@ -36,7 +36,7 @@
 					<a href="/recomendations/list" class="btn btn-light">Limpiar</a>
 				</form>
 
-
+				<a th:href="@{/tipoderecomendaciones/list}" class="btnnew btn btn-danger">Tipo de Recomendación</a>
 				<a th:href="@{/recomendations/new}" class="btnnew btn btn-danger">Nuevo</a>
 			</div>
 
