--- a/src/main/resources/templates/usuario/listUsuario.html
+++ b/src/main/resources/templates/usuario/listUsuario.html
@@ -41,7 +41,9 @@
 
 				</form>
 
+				<a th:href="@{/tipousuarios/list}" class="btnnew btn btn-danger">Roles</a>
 				<a th:href="@{/usuario/new}" class="btnnew btn btn-danger">Nuevo</a>
+				
 			</div>
 
 			<table class="table">
