--- a/src/main/resources/templates/Tipoua/listTipouas.html
+++ b/src/main/resources/templates/Tipoua/listTipouas.html
@@ -26,7 +26,7 @@
 
 			<div class="d-flex">
 				<h3 class="title-content">Lista de Tipo de Unidad de Almacenamiento</h3>
-				<a th:href="@{/tipouas/new}" class="btn btn-warning">Nuevo</a>
+				<a th:href="@{/tipouas/new}" class="btnnew btn btn-danger">Nuevo</a>
 			</div>
 			<table class="table">
 				<thead class="thead-light">
