--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -66,12 +66,7 @@
 				<p>Marcasㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p>
 			</div>
 
-			<div sec:authorize="hasRole('ROLE_ADMIN')" class="panelitem">
-				<a th:href="@{/tipousuarios/list}"> <i
-					class="fa fa-address-book" style="color: #CDB02B;"></i>
-				</a>
-				<p>Tipo Usuario</p>
-			</div>
+			
 			<div class="panelitem">
 				<a th:href="@{/tipouas/list}"> <i class="fa fa-hdd-o"
 					style="color: #CD2B90;"></i>
@@ -100,10 +95,10 @@
 			</div>
 
 			<div class="panelitem">
-				<a th:href="@{/tipoderecomendaciones/list}"> <i
+				<a th:href="@{/recomendations/list}"> <i
 					class="fa fa-star" style="color: #D6D010;"></i>
 				</a>
-				<p>Tipo de Recomendacion</p>
+				<p>Recomendaciones</p>
 			</div>
 
 
@@ -113,15 +108,9 @@
 				</a>
 				<p>Reportes</p>
 			</div>
+			
 			<div class="panelitem">
-				<a th:href="@{/recomendations/list}"> <i
-					class="fa fa-star" style="color: #D6D010;"></i>
-				</a>
-				<p>Recomendaciones</p>
-			</div>
-			<div class="panelitem">
-				<a th:href="@{/recoparts/list}"> <i
-					class="fa fa-star" style="color: #D6D010;"></i>
+				<a th:href="@{/recoparts/list}"> <i class="fas fa-bug" style="color: #D6D010;"></i>
 				</a>
 				<p>Recomendaciones Partes</p>
 			</div>
