--- a/src/main/resources/templates/tipoRecomendacion/listTipoRecomendacion.html
+++ b/src/main/resources/templates/tipoRecomendacion/listTipoRecomendacion.html
@@ -26,7 +26,8 @@
 
 			<div class="d-flex">
 				<h3 class="title-content">Lista de Tipo de Recomendación</h3>
-				<a th:href="@{/tipoderecomendaciones/new}" class="btn btn-warning">Nuevo</a>
+				<a th:href="@{/tipoderecomendaciones/new}" class="btnnew btn btn-danger">Nuevo</a>
+		
 			</div>
 			<table class="table">
 				<thead class="thead-light">
