--- a/src/main/resources/templates/tamanoMB/listTamanoMB.html
+++ b/src/main/resources/templates/tamanoMB/listTamanoMB.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en"
+	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <head>
 <meta charset="UTF-8">
@@ -26,7 +27,7 @@
 
 			<div class="d-flex">
 				<h3 class="title-content">Lista de Tamaños de Motherboard</h3>
-				<a th:href="@{/tamanomb/new}" class="btn btn-info">Nuevo</a>
+				<a sec:authorize="hasRole('ROLE_ADMIN')"th:href="@{/tamanomb/new}" class="btn btn-info">Nuevo</a>
 			</div>
 			<table class="table">
 				<thead class="thead-light">
@@ -34,7 +35,7 @@
 						<th scope="col" class="text-center">Código</th>
 						<th scope="col" class="text-center">Nombre</th>
 						<th scope="col" class="text-center">URL</th>
-						<th scope="col" class="text-center">OPERACIÓN</th>
+						<th sec:authorize="hasRole('ROLE_ADMIN')"scope="col" class="text-center">OPERACIÓN</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -42,7 +43,7 @@
 						<td class="text-center" th:text="${cat.idTamanoMB}"></td>
 						<td class="text-center" th:text="${cat.nTamanoMB}"></td>
 						<td class="text-center" th:text="${cat.urlTamanoMB}"></td>
-						<td class="text-center">
+						<td sec:authorize="hasRole('ROLE_ADMIN')"class="text-center">
 						
 						<a class="btn btn-default btn-sm" th:href="@{'/tamanomb/update/' + ${cat.idTamanoMB}}">  <i class="fa fa-cog"></i> Update</a>
 						<a class="btn btn-danger" th:href="@{/tamanomb/delete?id=}+${cat.idTamanoMB}">  <i class="fa fa-trash-o fa-lg"></i> Delete</a>
@@ -59,6 +60,7 @@
 	</div>
 
 
+	<div th:replace="fragments/nav :: logout" class="row topbar col-lg-12"></div>
 	<script src="/js/popper.min.js"></script>
 	<script src="/js/jquery-3.3.1.slim.min.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
