--- a/src/main/resources/templates/tipoRecomendacion/listTipoRecomendacion.html
+++ b/src/main/resources/templates/tipoRecomendacion/listTipoRecomendacion.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en"
+	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <head>
 <meta charset="UTF-8">
@@ -26,7 +27,7 @@
 
 			<div class="d-flex">
 				<h3 class="title-content">Lista de Tipo de Recomendación</h3>
-				<a th:href="@{/tipoderecomendaciones/new}" class="btnnew btn btn-danger">Nuevo</a>
+				<a sec:authorize="hasRole('ROLE_ADMIN')"th:href="@{/tipoderecomendaciones/new}" class="btnnew btn btn-danger">Nuevo</a>
 		
 			</div>
 			<table class="table">
@@ -34,14 +35,14 @@
 					<tr>
 						<th scope="col" class="text-center">Código</th>
 						<th scope="col" class="text-center">Tipo de Recomendación</th>
-						<th scope="col" class="text-center">OPERACIÓN</th>
+						<th sec:authorize="hasRole('ROLE_ADMIN')"scope="col" class="text-center">OPERACIÓN</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr th:each="tip : ${listaTipoRecomendacion}">
 						<td class="text-center" th:text="${tip.id_recomendation}"></td>
 						<td class="text-center" th:text="${tip.type}"></td>
-						<td class="text-center"><a class="btn btn-default btn-sm"
+						<td sec:authorize="hasRole('ROLE_ADMIN')"class="text-center"><a class="btn btn-default btn-sm"
 							th:href="@{'/tipoderecomendaciones/update/' + ${tip.id_recomendation}}">
 								<i class="fa fa-cog"></i> Update
 						</a> <a class="btn btn-danger"
