--- a/src/main/resources/templates/distrito/listDistrito.html
+++ b/src/main/resources/templates/distrito/listDistrito.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en" 
+	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+
 
 <head>
 <meta charset="UTF-8">
@@ -34,24 +36,24 @@
 					<button type="submit" class="btn btn-danger">Buscar</button>
 					<a href="/distritos/list" class="btn btn-light">Limpiar</a>
 				</form>
-				<a th:href="@{/distritos/new}" class="btnnew btn btn-danger">Nuevo</a>
+				<a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/distritos/new}" class="btnnew btn btn-danger">Nuevo</a>
 			</div>
 			<table class="table">
 				<thead class="thead-light">
 					<tr>
 						<th scope="col" class="text-center">Código</th>
 						<th scope="col" class="text-center">Distritos</th>
-						<th scope="col" class="text-center">OPERACIÓN</th>
+						<th sec:authorize="hasRole('ROLE_ADMIN')"scope="col" class="text-center">OPERACIÓN</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr th:each="cat : ${listaDistritos}">
 						<td class="text-center" th:text="${cat.idDistrito}"></td>
 						<td class="text-center" th:text="${cat.nombreDistrito}"></td>
-						<td class="text-center"><a class="btn btn-default btn-sm"
+						<td  class="text-center"><a sec:authorize="hasRole('ROLE_ADMIN')"class="btn btn-default btn-sm"
 							th:href="@{'/distritos/update/' + ${cat.idDistrito}}"> <i
 								class="fa fa-cog"></i> Update
-						</a> <a class="btn btn-danger"
+						</a> <a sec:authorize="hasRole('ROLE_ADMIN')"class="btn btn-danger"
 							th:href="@{/distritos/delete?id=}+${cat.idDistrito}"> <i
 								class="fa fa-trash-o fa-lg"></i> Delete
 						</a></td>
