--- a/src/main/resources/templates/reports/reports.html
+++ b/src/main/resources/templates/reports/reports.html
@@ -50,9 +50,9 @@
 							<div class="content container">
 								<div class="creportes d-flex justify-content-around">
 									<div class="cproyecto ">
-										<h3 class="tproyecto ">Productos por Venta</h3>
+										<h3 class="tproyecto ">Cantidad de hardware recomendado</h3>
 										<p class="dproyecto ">Lista de la cantidad de veces que un
-											producto fue vendido</p>
+											Hardware fue recomendado</p>
 										<a class="lnikp " th:href="@{/hardware/reporte1}">Ver
 											Reporte</a>
 									</div>
