--- a/src/main/resources/templates/Tipoua/tipoua.html
+++ b/src/main/resources/templates/Tipoua/tipoua.html
@@ -46,7 +46,7 @@
 						</div>
 
 					</div>
-					<button type="submit" class="btn btn-warning">Grabar</button>
+					<button type="submit" class="btnadd btn btn-primary">Grabar</button>
 					<a href="/tipouas/list" class="btn btn-light">Cancelar</a>
 
 				</form>
