--- a/src/main/resources/templates/tipoRecomendacion/tipoRecomendacion.html
+++ b/src/main/resources/templates/tipoRecomendacion/tipoRecomendacion.html
@@ -49,7 +49,7 @@
 						</div>
 
 					</div>
-					<button type="submit" class="btn btn-warning">Grabar</button>
+					<button type="submit" class="btnadd btn btn-primary">Grabar</button>
 					<a href="/tipoderecomendaciones/list" class="btn btn-light">Cancelar</a>
 
 				</form>
