--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -66,7 +66,7 @@
 				<p>Marcasㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p>
 			</div>
 
-			
+
 			<div class="panelitem">
 				<a th:href="@{/tipouas/list}"> <i class="fa fa-hdd-o"
 					style="color: #CD2B90;"></i>
@@ -95,24 +95,27 @@
 			</div>
 
 			<div class="panelitem">
-				<a th:href="@{/recomendations/list}"> <i
-					class="fa fa-star" style="color: #D6D010;"></i>
+				<a th:href="@{/recomendations/list}"> <i class="fa fa-star"
+					style="color: #D6D010;"></i>
 				</a>
 				<p>Recomendaciones</p>
 			</div>
 
 
+
+
 			<div class="panelitem">
-				<a th:href="@{/usuario/reportes}"> <i
-					class="fa fa-star" style="color: #D6D010;"></i>
-				</a>
-				<p>Reportes</p>
-			</div>
-			
-			<div class="panelitem">
-				<a th:href="@{/recoparts/list}"> <i class="fas fa-bug" style="color: #D6D010;"></i>
+				<a th:href="@{/recoparts/list}"> <i class="fa fa-star"
+					style="color: #D6D010;"></i>
 				</a>
 				<p>Recomendaciones Partes</p>
+			</div>
+
+			<div class="panelitem">
+				<a th:href="@{/usuario/reportes}"> <i class=" fas fa-bug"
+					style="color: #D6D010;"></i>
+				</a>
+				<p>Reportes</p>
 			</div>
 		</div>
 	</div>
