--- a/src/main/resources/templates/tipoPanel/listTipoPanel.html
+++ b/src/main/resources/templates/tipoPanel/listTipoPanel.html
@@ -26,7 +26,7 @@
 
 			<div class="d-flex">
 				<h3 class="title-content">Lista de Tipos Panel</h3>
-				<a th:href="@{/tipopanel/new}" class="btn btn-info">Nuevo</a>
+				<a th:href="@{/tipopanel/new}"  class="btnnew btn btn-danger">Nuevo</a>
 			</div>
 			<table class="table">
 				<thead class="thead-light">
