--- a/src/main/resources/templates/tipoModular/listTipoModular.html
+++ b/src/main/resources/templates/tipoModular/listTipoModular.html
@@ -26,7 +26,7 @@
 
 			<div class="d-flex">
 				<h3 class="title-content">Lista de Tipo Modular</h3>
-				<a th:href="@{/tipomodulares/new}"  class="btnnew btn btn-danger">Nuevo</a>
+				<a sec:authorize="hasRole('ROLE_ADMIN')"th:href="@{/tipomodulares/new}" class="btn btn-warning">Nuevo</a>
 			</div>
 			<table class="table">
 				<thead class="thead-light">
