--- a/src/main/resources/templates/tipoRecomendacion/tipoRecomendacion.html
+++ b/src/main/resources/templates/tipoRecomendacion/tipoRecomendacion.html
@@ -31,7 +31,7 @@
 			</div>
 			<div class="col-8 frm-registro">
 				<form th:action="@{/tipoderecomendaciones/save}" method="post"
-					th:object="${tipoRecomendacion}">
+					th:object="${typeRecomendacion}">
 					<div class="form-group">
 
 						
