--- a/src/main/resources/templates/tamanoMB/listTamanoMB.html
+++ b/src/main/resources/templates/tamanoMB/listTamanoMB.html
@@ -27,7 +27,7 @@
 
 			<div class="d-flex">
 				<h3 class="title-content">Lista de Tamaños de Motherboard</h3>
-				<a sec:authorize="hasRole('ROLE_ADMIN')"th:href="@{/tamanomb/new}" class="btn btn-info">Nuevo</a>
+				<a sec:authorize="hasRole('ROLE_ADMIN')"th:href="@{/tamanomb/new}"  class="btnnew btn btn-danger">Nuevo</a>
 			</div>
 			<table class="table">
 				<thead class="thead-light">
